src/test/deca/syntax/valid/synt/emptyMain.deca
// Description:
//    tests de programme sans main
//    syntaxiquement correct
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023
//